--- a/lightblog-web/src/main/webapp/WEB-INF/web.xml
+++ b/lightblog-web/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE web-app PUBLIC
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+
   <display-name>Archetype Created Web Application</display-name>
 
   <!-- Spring和mybatis的配置文件 -->
@@ -16,9 +18,11 @@
     <param-name>log4jRefreshInterval</param-name>
     <param-value>60000</param-value>
   </context-param>
-  <listener>
-    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
+
+  <context-param>
+    <param-name>webAppRootKey</param-name>
+    <param-value>lightblog.webapp</param-value>
+  </context-param>
 
   <!-- 编码过滤器 -->
   <filter>
@@ -34,6 +38,14 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
+
+  <listener>
+    <listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
+  </listener>
 
   <!--Spring监听器 ApplicationContext 载入 -->
   <listener>
@@ -71,4 +83,8 @@
   <session-config>
     <session-timeout>15</session-timeout>
   </session-config>
+
+
+
+
 </web-app>
