--- a/lightblog-web/src/main/resources/jdbc.properties
+++ b/lightblog-web/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@ driverLocation=F:/Coding/Maven/repository/mysql/mysql-connector-java/5.1.30/mysq
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/lightblog?useUnicode=true&characterEncoding=utf-8
 username=root
-password=2017cwdn
+password=cyming
 #定义初始连接数
 initialSize=0
 #定义最大连接数
